// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoginPage > snapshots > should match snapshot IF form has errors 1`] = `
<div
  class="cwa:flex cwa:min-h-full cwa:flex-col cwa:justify-center cwa:py-12 cwa:sm:px-6 cwa:lg:px-8 cwa:bg-dark"
>
  <div
    class="cwa:sm:mx-autocwa:sm::w-full cwa:sm::max-w-md"
  >
    <logo-stub
      class="cwa:mx-auto cwa:h-12 cwa:w-auto cwa:text-neutral-400"
    />
  </div>
  <div
    class="cwa:mt-8 cwa:sm:mx-auto cwa:sm:w-full cwa:sm:max-w-md cwa:text-white"
  >
    <div
      class="cwa:bg-neutral-800 cwa:py-8 cwa:px-4 cwa:shadow cwa:sm:px-10"
    >
      <warning-stub
        class="cwa:mb-4"
      >
        Something went wrong, try submitting form again
      </warning-stub>
      <form
        action="#"
        class="cwa:flex cwa:flex-col cwa:gap-y-6"
        method="post"
      >
        
        <div>
          Test form content
        </div>
        
        <div>
          <button
            class="cwa:cursor-pointer cwa:flex cwa:w-full cwa:justify-center cwa:bg-neutral-600 cwa:py-2 cwa:px-3 cwa:text-sm cwa:font-semibold cwa:text-white cwa:shadow-sm cwa:hover:bg-neutral-500 cwa:focus-visible:outline cwa:focus-visible:outline-2 cwa:focus-visible:outline-offset-2 cwa:focus-visible:outline-neutral-600"
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`LoginPage > snapshots > should match snapshot IF form is submitting 1`] = `
<div
  class="cwa:flex cwa:min-h-full cwa:flex-col cwa:justify-center cwa:py-12 cwa:sm:px-6 cwa:lg:px-8 cwa:bg-dark"
>
  <div
    class="cwa:sm:mx-autocwa:sm::w-full cwa:sm::max-w-md"
  >
    <logo-stub
      class="cwa:mx-auto cwa:h-12 cwa:w-auto cwa:text-neutral-400"
    />
  </div>
  <div
    class="cwa:mt-8 cwa:sm:mx-auto cwa:sm:w-full cwa:sm:max-w-md cwa:text-white"
  >
    <div
      class="cwa:bg-neutral-800 cwa:py-8 cwa:px-4 cwa:shadow cwa:sm:px-10"
    >
      <!--v-if-->
      <form
        action="#"
        class="cwa:flex cwa:flex-col cwa:gap-y-6"
        method="post"
      >
        
        <div>
          Test form content
        </div>
        
        <div>
          <button
            class="cwa:opacity-50 cwa:cursor-pointer cwa:flex cwa:w-full cwa:justify-center cwa:bg-neutral-600 cwa:py-2 cwa:px-3 cwa:text-sm cwa:font-semibold cwa:text-white cwa:shadow-sm cwa:hover:bg-neutral-500 cwa:focus-visible:outline cwa:focus-visible:outline-2 cwa:focus-visible:outline-offset-2 cwa:focus-visible:outline-neutral-600"
            disabled=""
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
